fix: remove highlight on headings on mobile

--- a/styles.css
+++ b/styles.css
@@ -395,7 +395,8 @@ li {
     }
 
     h3 {
-        cursor: pointer;
+        user-select: none;
+        -webkit-user-select: none;
         -webkit-tap-highlight-color: transparent;
     }
 
